--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
   --white-color: #ffffff;
   --light-color: #f4f4fd;
   --green-color: #31d0aa;
+  --lightslate-color: #8e8f99;
 }
 
 html {
@@ -390,6 +391,37 @@ img {
   margin-bottom: 32px;
 }
 
+/**CUSTOMERS**/
+
+.customers-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
+}
+
+.customer-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 168px;
+  height: 88px;
+  border: 1px solid var(--lightslate-color);
+  border-radius: 4px;
+}
+.customer-icon {
+  fill: var(--lightslate-color);
+}
+.customer-link:hover,
+.customer-link:focus {
+  border-color: var(--pressed-state-color);
+}
+
+.customer-link:hover .customer-icon,
+.customer-link:focus .customer-icon {
+  border-color: var(--pressed-state-color);
+  fill: var(--pressed-state-color);
+}
 /*FOOTER*/
 
 .footer {
